--- a/Assignment/myproject/shopping/templates/base.html
+++ b/Assignment/myproject/shopping/templates/base.html
@@ -19,7 +19,13 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-              <a class="nav-link" href="/add_page/">Add <span class="sr-only">(current)</span></a>
+              <a class="nav-link" href="/add_page/">Add</a>
+            </li>
+            <li class="nav-item active">
+              <a class="nav-link" href="/signup/">SignUp</a>
+            </li>
+            <li class="nav-item active">
+              <a class="nav-link" href="/login/">LogIn</a>
             </li>
 
             {% comment %} <li class="nav-item">
