--- a/Assignment/myproject/shopping/templates/shopping/update_item.html
+++ b/Assignment/myproject/shopping/templates/shopping/update_item.html
@@ -1,3 +1,5 @@
+
+
 {% extends "base.html" %}
 
 {% block title %}
@@ -5,5 +7,15 @@ Update_{{item.name}}
 {% endblock title %}
 
 {% block content %}
-{{form}}
+<section>
+
+    <h1>Update {{ item.name }}</h1>
+    
+    <form class="form-with-validation" action="/update-item/{{item.id}}/" method="post" enctype="multipart/form-data">
+        {% csrf_token %}
+        {{ form }}
+        <button type="submit" class="btn btn-primary">Submit</button>
+    </form>
+
+</section>
 {% endblock content %}
