--- a/Assignment/myproject/shopping/templates/base.html
+++ b/Assignment/myproject/shopping/templates/base.html
@@ -18,15 +18,21 @@
       
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
-              <a class="nav-link" href="/add_page/">Add</a>
-            </li>
-            <li class="nav-item active">
-              <a class="nav-link" href="/signup/">SignUp</a>
-            </li>
-            <li class="nav-item active">
-              <a class="nav-link" href="/login/">LogIn</a>
-            </li>
+            {% if request.user.is_authenticated %}
+              <li class="nav-item active">
+                <a class="nav-link" href="/logout/">Logout</a>
+              </li>
+              <li class="nav-item active">
+                <a class="nav-link" href="/add_page/">Add</a>
+              </li>
+            {% else %}
+              <li class="nav-item active">
+                <a class="nav-link" href="/signup/">SignUp</a>
+              </li>
+              <li class="nav-item active">
+                <a class="nav-link" href="/login/">LogIn</a>
+              </li>
+            {% endif %}
 
             {% comment %} <li class="nav-item">
               <a class="nav-link" href="#">Link</a>
