--- a/Assignment/myproject/shopping/templates/shopping/login_page.html
+++ b/Assignment/myproject/shopping/templates/shopping/login_page.html
@@ -5,5 +5,15 @@
 {% endblock title %}
 
 {% block content %}
-    {{ formset }}
+<section>
+
+    <h1>Log In</h1>
+    
+    <form class="form-with-validation" action="/login/" method="post" enctype="multipart/form-data">
+        {% csrf_token %}
+        {{ form }}
+        <button type="submit" class="btn btn-primary">Submit</button>
+    </form>
+
+</section>
 {% endblock content %}
